# Legal-AI-Agents-IND

./: .env.prod.example  AUTHORS.md  CLAUDE.md  COMPANY.md  CONTRIBUTING.md  CURRENT_STATUS.md  DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_COMPLETE.md  ISSUE_TRACKING_GUIDE.md  LICENSE  NEXT_STEPS.md  PROJECT_MANAGEMENT_SETUP.md  PROJECT_STATUS.md  README.md  SECURITY.md  SESSION_CONTEXT.md  START_TOMORROW.md  TOMORROW_WORK_PLAN.md  docker-compose.prod.yml  docker-compose.unified.yml  nginx.conf  start-unified-api.sh
.github/: CLAUDE.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  changelog-config.json  dependabot.yml  labels.yml  milestones.yml
Wiki/: 01-Installation-Guide.md  02-Access-Credentials.md  03-Architecture.md  04-Graphiti-Crawl4AI-Guide.md  05-Unified-API-Design.md  06-Unified-API-Usage-Guide.md  README.md
graphiti/: CLAUDE.md  README_LEGAL_INTEGRATION.md  pyproject.toml  test_enhanced_crawler.py
k8s/: CLAUDE.md
unified-api/: .env.example  CLAUDE.md  Dockerfile  ENHANCED_CRAWLER_INTEGRATION.md  README.md  pyproject.toml
unified-api/app/: __init__.py  config.py  main.py
unified-api/app/graphql/: README.md  __init__.py  context.py  schema.py
unified-api/app/middleware/: __init__.py  auth.py
unified-api/app/models/: __init__.py  requests.py  responses.py
unified-api/app/routers/: crawl.py  enhanced_crawler.py  graph.py  legal.py  process.py
unified-api/app/services/: graphiti_service.py  unstract_service.py
unified-api/app/utils/: __init__.py  cache.py
unified-api/tests/: __init__.py  test_graphql.py  test_integration.py
(+86 files in other folders)
